# ocaml-nix-template

./: .gitignore  README.md  dune-project  flake.nix
test/: dune  test_nix_template.ml
